--- a/CG2_roop6.vcxproj
+++ b/CG2_roop6.vcxproj
@@ -81,6 +81,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="3d\Enguin.cpp" />
     <ClCompile Include="3d\Triangle.cpp" />
     <ClCompile Include="Common\DirectX.cpp" />
     <ClCompile Include="Common\WindowAPI.cpp" />
@@ -90,8 +91,10 @@
   <ItemGroup>
     <ClInclude Include="3d\Triangle.h" />
     <ClInclude Include="Common\DirectX.h" />
+    <ClInclude Include="Common\Enguin.h" />
     <ClInclude Include="Common\WindowAPI.h" />
     <ClInclude Include="ConvertString.h" />
+    <ClInclude Include="Vector4.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Object3d.PS.hlsl">
