--- a/CG2_roop6.vcxproj
+++ b/CG2_roop6.vcxproj
@@ -81,9 +81,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="3d\Enguin.cpp" />
     <ClCompile Include="3d\Triangle.cpp" />
     <ClCompile Include="Common\DirectX.cpp" />
+    <ClCompile Include="Common\Engine.cpp" />
     <ClCompile Include="Common\WindowAPI.cpp" />
     <ClCompile Include="ConvertString.cpp" />
     <ClCompile Include="main.cpp" />
@@ -91,7 +91,7 @@
   <ItemGroup>
     <ClInclude Include="3d\Triangle.h" />
     <ClInclude Include="Common\DirectX.h" />
-    <ClInclude Include="Common\Enguin.h" />
+    <ClInclude Include="Common\Engine.h" />
     <ClInclude Include="Common\WindowAPI.h" />
     <ClInclude Include="ConvertString.h" />
     <ClInclude Include="Vector4.h" />
