--- a/CG2_roop6.vcxproj
+++ b/CG2_roop6.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="Common\Engine.cpp" />
     <ClCompile Include="Common\WindowAPI.cpp" />
     <ClCompile Include="ConvertString.cpp" />
+    <ClCompile Include="CreateResource.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
